# My-DnD

./: .gitignore  README.md  README_MULTI_TOOL_EVENT_LOOP_RU.txt  README_SCROLL_CARDS_FIX_RU.txt  README_STATE_CARDS_PATCH_RU.txt  perf_ideas.md  settings.gradle  task_gbnf_selfcheck.md
app/: README.md  build.gradle
app/src/androidTest/java/com/example/mydnd/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_bridge.cpp
app/src/main/java/com/example/mydnd/: GameActivity.java  MainActivity.java  NewGameActivity.java
app/src/main/java/com/example/mydnd/changeset/: ChangeSetExecutionReport.java  ChangeSetExecutor.java  ChangeSetOperation.java  ChangeSetParser.java  ChangeSetPromptBuilder.java  ChangeSetPromptState.java  ChangeSetPromptStateRepository.java
app/src/main/java/com/example/mydnd/db/: AppDatabase.java  DbExecutor.java
app/src/main/java/com/example/mydnd/diagnostics/: BehaviorTestCase.java  BehaviorTestDataset.java  BehaviorTestRunner.java
app/src/main/java/com/example/mydnd/director/: DirectorAction.java  DirectorActionParser.java  DirectorActionType.java  DirectorActionValidator.java  DirectorExecutor.java  DirectorFlowController.java  DirectorMode.java  DirectorPromptState.java  DirectorPromptStateRepository.java  DirectorResult.java  DirectorStatus.java  DirectorStore.java  DirectorStoreResult.java  DirectorToolResponseBuilder.java  DirectorToolSpec.java  DirectorValidation.java  RoomDirectorStore.java
app/src/main/java/com/example/mydnd/draft/: CharacterDraft.java  DraftJsonParser.java  StartingSituationDraft.java  WorldDraft.java
app/src/main/java/com/example/mydnd/game/: CampaignPromptRepository.java  CampaignPromptState.java  CharacterLifeRepository.java  CharacterLifeState.java  CharacterStateRepository.java  GameEvent.java  InventoryActionHintResolver.java  NpcStateRepository.java  (+2 more)
app/src/main/res/anim/: enter_from_left_fade.xml  enter_from_right_fade.xml  exit_to_left_fade.xml  exit_to_right_fade.xml
app/src/main/res/color/: button_fantasy_text.xml
app/src/main/res/drawable/: button_fantasy.xml  living_world_card_background.xml  living_worlds_panel_background.xml
app/src/main/res/layout/: activity_main.xml  activity_new_game.xml  dialog_confirm_delete_living_world.xml  dialog_confirm_delete_saved_game.xml  dialog_confirm_reset_data.xml  dialog_dice_choice.xml  dialog_dice_roll.xml  dialog_fantasy_text.xml  dialog_living_worlds.xml  dialog_saved_games.xml  dialog_settings.xml  item_living_world.xml  item_saved_game.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/mydnd/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+79 files in other folders)
